src/objects/EventApi__Attendee__c.object
<CustomObject>
    <description>Attendees track individuals registered for conference style or other &quot;registration&quot; style Events.</description>
    <fields>
        <fullName>EventApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to the Account that the Attendee Contact is associated with.</description>
        <inlineHelpText>** System Calculated Override ** Link to the Account that the Attendee Contact is associated with.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Event Registrations</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related assignment that the attendee was created from</description>
        <inlineHelpText>Link to the related assignment that the attendee was created from</inlineHelpText>
        <label>Assignment</label>
        <referenceTo>OrderApi__Assignment__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Contact_Created_by_System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be automatically checked when the contact is created while registering for an event.</description>
        <inlineHelpText>This field will be automatically checked when the contact is created while registering for an event.</inlineHelpText>
        <label>Contact Created by System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Link to the related Contact. Required only if &quot;Require Contact Link for Attendees&quot; is checked on the parent Event.</description>
        <inlineHelpText>** Conditionally Required ** Link to the related Contact. Required only if &quot;Require Contact Link for Attendees&quot; is checked on the parent Event.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Email__c</fullName>
        <description>Enter the email to use for communications sent to the Attendee related to the Event.</description>
        <inlineHelpText>Enter the email to use for communications sent to the Attendee related to the Event.</inlineHelpText>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <description>** Required ** Master-detail link to event.</description>
        <inlineHelpText>** Required ** Master-detail link to event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EventApi__First_Name__c</fullName>
        <description>Defines the first name of the attendee</description>
        <inlineHelpText>Defines the first name of the attendee</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Full_Name__c</fullName>
        <description>** System Calculated Override ** The full name of the attendee as it should display on Event badges. Derives automatically from the First and Last Name fields on the linked Contact record.</description>
        <inlineHelpText>** System Calculated Override ** The full name of the attendee as it should display on Event badges. Derives automatically from the First and Last Name fields on the linked Contact record.</inlineHelpText>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Invitation_Status__c</fullName>
        <description>The state of the related attendee&apos;s invitation.</description>
        <inlineHelpText>The state of the related attendee&apos;s invitation.</inlineHelpText>
        <label>Invitation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent</fullName>
                    <default>true</default>
                    <label>Not Sent</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Is_Checked_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Attendee is considered to be/was in attendance for the Event. Default unchecked.</description>
        <inlineHelpText>When checked, the Attendee is considered to be/was in attendance for the Event. Default unchecked.</inlineHelpText>
        <label>Checked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Invitation_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the attendee has registered for the related Invitation Only event.</description>
        <inlineHelpText>When checked, the attendee has registered for the related Invitation Only event.</inlineHelpText>
        <label>Is Invitation Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Invitation_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the attendee has declined the invitation to the related Invitation Only event.</description>
        <inlineHelpText>When checked, the attendee has declined the invitation to the related Invitation Only event.</inlineHelpText>
        <label>Is Invitation Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Invitation_Not_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the related attendee has not been sent an invitation to the related Invitation Only event.</description>
        <inlineHelpText>When checked, the related attendee has not been sent an invitation to the related Invitation Only event.</inlineHelpText>
        <label>Is Invitation Not Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Invitation_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the attendee was sent an invitation to the related Invitation Only event.</description>
        <inlineHelpText>When checked, the attendee was sent an invitation to the related Invitation Only event.</inlineHelpText>
        <label>Is Invitation Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Attendee status will be updated to &apos;Registered&apos;. Default unchecked.</description>
        <inlineHelpText>When checked, the Attendee status will be updated to &apos;Registered&apos;. Default unchecked.</inlineHelpText>
        <label>Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Last_Invitation_Email_Sent__c</fullName>
        <description>The most recent date an event invitation was sent to the related attendee. This date is displayed within the related attendee row in the Event Builder&apos;s Invitation Only tab.</description>
        <inlineHelpText>The most recent date an event invitation was sent to the related attendee. This date is displayed within the related attendee row in the Event Builder&apos;s Invitation Only tab.</inlineHelpText>
        <label>Last Invitation Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventApi__Last_Name__c</fullName>
        <description>Defines the last name of the attendee</description>
        <inlineHelpText>Defines the last name of the attendee</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Max_Guests_Allowed__c</fullName>
        <description>The maximum number of guests the related attendee is allowed to additionally register.</description>
        <inlineHelpText>The maximum number of guests the related attendee is allowed to additionally register.</inlineHelpText>
        <label>Max Guests Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Preferred_Email__c</fullName>
        <description>Email for the attendee</description>
        <inlineHelpText>Email for the attendee</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EventApi__Refund_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, indicates that the related attendee has requested for a ticket refund.</description>
        <inlineHelpText>When checked, indicates that the related attendee has requested for a ticket refund.</inlineHelpText>
        <label>Refund Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Date__c</fullName>
        <description>** System Calculated Override ** The date the Attendee registered for the Event. Defaults to the value of the &quot;Transaction Date&quot; if not defined on entry.</description>
        <inlineHelpText>** System Calculated Override ** The date the Attendee registered for the Event. Defaults to the value of the &quot;Transaction Date&quot; if not defined on entry.</inlineHelpText>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Registration Group.</description>
        <inlineHelpText>Link to related Registration Group.</inlineHelpText>
        <label>Registration Group</label>
        <referenceTo>EventApi__Registration_Group__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Site_Url__c</fullName>
        <description>URL endpoint to be used for email registrants.</description>
        <inlineHelpText>URL endpoint to be used for email registrants.</inlineHelpText>
        <label>Register Site Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Total__c</fullName>
        <description>** System Calculated ** Total registration sales derived from the total of all child registration items.</description>
        <inlineHelpText>** System Calculated ** Total registration sales derived from the total of all child registration items.</inlineHelpText>
        <label>Registration Total</label>
        <summarizedField>EventApi__Registration_Item__c.EventApi__Total__c</summarizedField>
        <summaryForeignKey>EventApi__Registration_Item__c.EventApi__Attendee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EventApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to the Sales Order Line item that created the Registration.</description>
        <inlineHelpText>** System Calculated Override ** Link to the Sales Order Line item that created the Registration.</inlineHelpText>
        <label>Sales Order Line (Source)</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Event Registrations</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to the Sales Order that created the registration.</description>
        <inlineHelpText>** System Calculated Override ** Link to the Sales Order that created the registration.</inlineHelpText>
        <label>Sales Order (Source)</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>Event Registrations</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Seat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked to the related seat.</description>
        <inlineHelpText>Linked to the related seat.</inlineHelpText>
        <label>Seat</label>
        <referenceTo>EventApi__Seat__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Send_Invitation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, triggers an email to be sent the related attendee from an Invitation Only Event Email Workflow.</description>
        <inlineHelpText>When checked, triggers an email to be sent the related attendee from an Invitation Only Event Email Workflow.</inlineHelpText>
        <label>Send Invitation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send email notifications for event registration.</description>
        <inlineHelpText>Send email notifications for event registation.</inlineHelpText>
        <label>Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Status__c</fullName>
        <description>** Required ** The current status of the Attendee Registration. Defaults to &quot;Registered&quot;.</description>
        <inlineHelpText>** Required ** The current status of the Attendee Registration. Defaults to &quot;Registered&quot;.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                    <default>true</default>
                    <label>Invited</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Ticket_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Link to Ticket Type.</description>
        <inlineHelpText>** Required ** Link to Ticket Type.</inlineHelpText>
        <label>Ticket Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.EventApi__Event__c</field>
                <operation>equals</operation>
                <valueField>EventApi__Ticket_Type__c.EventApi__Event__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EventApi__Ticket_Type__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>EventApi__All</fullName>
        <columns>NAME</columns>
        <columns>EventApi__Contact__c</columns>
        <columns>EventApi__Account__c</columns>
        <columns>EventApi__Full_Name__c</columns>
        <columns>EventApi__Event__c</columns>
        <columns>EventApi__Status__c</columns>
        <columns>EventApi__Ticket_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Attendee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>